MainGameFrame: Now shows win dialog if player completes all words in Easy, Normal, Hard difficulties as words do not repeat after being completed, Asian stays the same MainMenu: Fix UI inconsistency in How to Play and About Us dialogs GameInstance: Add method to remove words after being completed (for all difficulties except Asian)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# NetBeans specific files and folders #
 dist/
 build/
 nbproject/private/
-test/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
